[package]
name = "threads-api"
version = "0.1.0"
edition = "2024"
description = "Rust client library for the Meta Threads API"
license = "MIT"
repository = "https://github.com/tirthpatell/threads-api"
keywords = ["threads", "meta", "api", "social-media"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.9"
base64 = "0.22"
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
